# Proyecto

crowfunding/: LICENSE  README.md  manage.py  pyproject.toml
crowfunding/campania/: admin.py  apps.py  context_processors.py  forms.py  urls.py  views.py
crowfunding/campania/migrations/: 0001_initial.py  0002_donacion.py
crowfunding/campania/models/: __init__.py  campania.py  categoria.py  donacion.py
crowfunding/campania/templates/: campania_fin.html  catalog.html  donacion.html  index.html  list_donaciones.html  signin.html  signup.html  success_signup.html
crowfunding/crowfunding/: asgi.py  settings.py  urls.py  wsgi.py
crowfunding/static/js/: campania-script.js
