[tool.poetry]
name = "crowfunding"
version = "0.1.0"
description = "Desarrollo CrowFunding"
authors = ["Diego Yanez <diegoyanez13@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.11"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^24.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
